--- a/made,deleteline.html
+++ b/made,deleteline.html
@@ -15,7 +15,7 @@
     <!-- 하다가 알아낸건데 style 태그 내에 주석달면 파일형식을 인식을못함 이상해짐 -->
 </head>
 <body>
-    h1><a href="index.html">WEB</a></h1>
+    <h1><a href="selector-basic">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
