--- a/selector.html
+++ b/selector.html
@@ -13,7 +13,7 @@
     <!-- 웹페이지 내부에 css 를 삽입하는 방법 1) head 태그 내 style 태그 사용 -->
 </head>
 <body>
-    h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html" style="color:red">CSS</a></li>
