--- a/csshyper.html
+++ b/csshyper.html
@@ -5,37 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>csshyper</title>
-    <style>
-        a{
-            color:black;
-            text-decoration: none;
-        }
-        h1 
-        {
-            font-size:45px;
-            text-align:center;
-        }
-        .saw
-        {
-            color:gray;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="selector-basic.html">WEB</a></h1>
-    <ol>
-        <li><a href="htmlhyper.html">HTML</a></li>
-        <li><a href="csshyper.html" class="saw">CSS</a></li>
-        <li><a href="javascript.html">JavaScript</a></li>
-    </ol>
-    <h2>CSS</h2>
-    <p>
-        Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written 
-        in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written 
-        in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is 
-        applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone 
-        technology used by most websites to create visually engaging webpages, user interfaces for web applications,
-        and user interfaces for many mobile applications.
-    </p>
+    <div id="grid">
+        <ol>
+            <li><a href="htmlhyper.html">HTML</a></li>
+            <li><a href="csshyper.html"><font color="pink">CSS</font></a></li>
+            <li><a href="javascript.html">JavaScript</a></li>
+        </ol>
+        <div>
+            <h2>CSS</h2>
+            <p>
+                Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written 
+                in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written 
+                in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is 
+                applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone 
+                technology used by most websites to create visually engaging webpages, user interfaces for web applications,
+                and user interfaces for many mobile applications.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
