--- a/htmlhyper.html
+++ b/htmlhyper.html
@@ -5,32 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>htmlhyper</title>
-    <style>
-        a{
-            color:black;
-            text-decoration: none;
-        }
-        h1 
-        {
-            font-size:45px;
-            text-align:center;
-        }
-        .saw
-        {
-            color:grey;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="selector-basic.html">WEB</a></h1>
-    <ol>
-        <li><a href="htmlhyper.html" class="saw">HTML</a></li>
-        <li><a href="csshyper.html">CSS</a></li>
-        <li><a href="javascript.html">JavaScript</a></li>
-    </ol>
-    <h2>HTML</h2>
-    <p>
-        Hypertext Markup Language ( HyperText Markup Language, HTML , munhwaeo : second body markings Post language, hyper text markup Post language) web pages dominant for the markup language is. In addition, HTML provides a way to create structured documents with links, citations, and other items, as well as representing structural meaning for text such as headings, paragraphs, and lists . And it can be used to embed images and objects and create interactive forms. HTML is written in the form of HTML elements that are "tags" enclosed in angle brackets within the web page content . HTML is a Web browser that affect the behavior of HTML processing device, such as a JavaScript that defines the appearance and layout of text and other items CSS same script can contain or recall. The W3C , co-director of the HTML and CSS standards , recommends the use of CSS for clear and representative markup.
-    </p>
+    <div id="grid">
+        <ol>
+            <li><a href="htmlhyper.html"><font color="pink">HTML</font></a></li>
+            <li><a href="csshyper.html">CSS</a></li>
+            <li><a href="javascript.html">JavaScript</a></li>
+        </ol>
+        <div>
+            <h2>HTML</h2>
+            <p>
+                Hypertext Markup Language ( HyperText Markup Language, HTML , munhwaeo : second body markings Post language, hyper text markup Post language) web pages dominant for the markup language is. In addition, HTML provides a way to create structured documents with links, citations, and other items, as well as representing structural meaning for text such as headings, paragraphs, and lists . And it can be used to embed images and objects and create interactive forms. HTML is written in the form of HTML elements that are "tags" enclosed in angle brackets within the web page content . HTML is a Web browser that affect the behavior of HTML processing device, such as a JavaScript that defines the appearance and layout of text and other items CSS same script can contain or recall. The W3C , co-director of the HTML and CSS standards , recommends the use of CSS for clear and representative markup.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
