--- a/javascript.html
+++ b/javascript.html
@@ -5,32 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScripthyper</title>
-    <style>
-        a{
-            color:black;
-            text-decoration: none;
-        }
-        h1 
-        {
-            font-size:45px;
-            text-align:center;
-        }
-        .saw
-        {
-            color:grey;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="selector-basic.html">WEB</a></h1>
-    <ol>
-        <li><a href="htmlhyper.html">HTML</a></li>
-        <li><a href="csshyper.html">CSS</a></li>
-        <li><a href="javascript.html" class="saw">JavaScript</a></li>
-    </ol>
-    <h2>JavaScript</h2>
-    <p>
-        JavaScript ( English : -wide JavaScript ) is an object based on a script programming language is. This language is mainly used within web browsers and has the ability to access built-in objects of other application programs. It is also used for server programming like a runtime environment such as Node.js. JavaScript original Netscape Communications Corp. 's Brendan Eich in the name of the (Brendan Eich) first Mocha (Mocha), and later was developed under the name Live script (LiveScript), was the final JavaScript. JavaScript has similar syntax to Sun Microsystems ' Java , but this is actually because both languages ​​are based on the basic syntax of the C language, and Java and JavaScript are not directly related. Self or scheme than Java except for name and syntaxThere are many similarities with JavaScript is recognized as the language that best implements the standard specification of ECMAScript, and was basically supported in most browsers until ECMAScript 5 (ES5), but from ECMAScript 6, it is compiled with a transpiler for browser compatibility 
-    </p>
+    <div id="grid">
+        <ol>
+            <li><a href="htmlhyper.html">HTML</a></li>
+            <li><a href="csshyper.html">CSS</a></li>
+            <li><a href="javascript.html"><font color="pink">JavaScript</font></a></li>
+        </ol>
+        <div>
+            <h2>JavaScript</h2>
+            <p>
+                JavaScript ( English : -wide JavaScript ) is an object based on a script programming language is. This language is mainly used within web browsers and has the ability to access built-in objects of other application programs. It is also used for server programming like a runtime environment such as Node.js. JavaScript original Netscape Communications Corp. 's Brendan Eich in the name of the (Brendan Eich) first Mocha (Mocha), and later was developed under the name Live script (LiveScript), was the final JavaScript. JavaScript has similar syntax to Sun Microsystems ' Java , but this is actually because both languages ​​are based on the basic syntax of the C language, and Java and JavaScript are not directly related. Self or scheme than Java except for name and syntaxThere are many similarities with JavaScript is recognized as the language that best implements the standard specification of ECMAScript, and was basically supported in most browsers until ECMAScript 5 (ES5), but from ECMAScript 6, it is compiled with a transpiler for browser compatibility 
+            </p>
+        </div>
+    </div>
 </body>
 </html>
