erase style tag and import style.css file

--- a/selector-basic.html
+++ b/selector-basic.html
@@ -5,24 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>selector-basic</title>
-    <style>
-        a{
-            color:black;
-            text-decoration: none;
-        }
-        h1 
-        {
-            font-size:45px;
-            text-align:center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="selector-basic.html">WEB</a></h1>
-    <ol>
-        <li><a href="htmlhyper.html">HTML</a></li>
-        <li><a href="csshyper.html">CSS</a></li>
-        <li><a href="javascript.html">JavaScript</a></li>
-    </ol>
+    <div id="grid">
+        <ol>
+            <li><a href="htmlhyper.html">HTML</a></li>
+            <li><a href="csshyper.html">CSS</a></li>
+            <li><a href="javascript.html">JavaScript</a></li>
+        </ol>
+        <div>
+            <h2>Welcome!</h2>
+            <p>
+                <font size="3" font color="green">Here is the main page of my css practice</font>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
